telegram bot - search for images, upload images to server
